# wlan-scapy

./: .gitignore  CLAUDE.md  README.md  SKILL.md  USAGE.md  pyproject.toml
config/: topology.yaml
docs/superpowers/plans/: 2026-05-17-wlan-ap-test-platform-plan.md  2026-05-17-wlan-sniffer-role-plan.md
docs/superpowers/specs/: 2026-05-17-wlan-ap-test-platform-design.md  2026-05-17-wlan-sniffer-role-design.md
scripts/: ap_stress_telnet.py
scripts/securecrt/: ap_config_stress_test.py
src/: __init__.py
src/cli/: parser.py  run.py
src/connections/: base.py  pool.py  serial.py  ssh.py  telnet.py
src/devices/: ap.py  sniffer.py  sta.py  wired_pc.py
src/traffic/: l3.py  l4.py  special.py  wifi_data.py
src/transport/: base.py  radio.py
src/utils/: config.py  pcap.py  sniff.py
src/wlan/: __init__.py  anomalies.py  frames.py  ie.py  rates.py
tests/: conftest.py  test_environment_local.py  test_environment_verify.py  test_injection_8sta.py  test_sta_local.py
tests/cli/: test_parser.py
tests/connections/: test_base.py  test_serial.py  test_ssh.py
tests/devices/: test_sniffer.py
tests/scenarios/attacks/: test_deauth_flood.py  test_malformed_mgmt.py  test_truncated_frames.py
tests/scenarios/multi_sta/: conftest.py
tests/scenarios/sta_association/: conftest.py
tests/scenarios/sta_roaming/: test_reassoc.py
tests/scenarios/sta_scanning/: test_probe.py
tests/scenarios/traffic_forwarding/: conftest.py
tests/traffic/: test_l3.py  test_l4.py  test_special.py
tests/utils/: test_pcap.py
tests/wlan/: test_frames.py  test_ie.py
(+7 files in other folders)
